src/objects/AcctSeed__Expense_Line__c.object
<CustomObject>
    <description>Line item used to document a specific expense incurred by an employee. The aggregation of multiple expense lines constitutes an expense report.</description>
    <fields>
        <fullName>AcctSeed__Account_Payable_Line__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Reference to related Payable Line. Expenses are aggregated into Payable records for approval and payment.</inlineHelpText>
        <label>Payable Line</label>
        <referenceTo>AcctSeed__Account_Payable_Line__c</referenceTo>
        <relationshipLabel>Expense Lines</relationshipLabel>
        <relationshipName>Expenses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Account__c</fullName>
        <formula>AcctSeed__Project__r.AcctSeed__Account__r.Name</formula>
        <label>Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Amount__c</fullName>
        <inlineHelpText>Currency Field</inlineHelpText>
        <label>Amount</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Billable__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Used in the Time &amp; Material Billings process to help filter transactions in or out of the process.</inlineHelpText>
        <label>Billable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Billed__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Denotes whether the expense has been billed</inlineHelpText>
        <label>Billed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Billing_Line__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Reference to related Billing Line. Expenses can be aggregated into Billing records for approval and billing.</inlineHelpText>
        <label>Billing Line</label>
        <referenceTo>AcctSeed__Billing_Line__c</referenceTo>
        <relationshipLabel>Expense Lines</relationshipLabel>
        <relationshipName>Expense_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Credit_Card_Vendor_Payable__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Denotes whether the expense line should be paid to a credit card vendor</inlineHelpText>
        <label>Credit Card Vendor Payable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Credit_Card_Vendor__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>This field is required if the expense is not to be reimbursed to the employee, but a corporate credit card.</inlineHelpText>
        <label>Credit Card Vendor</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.AcctSeed__Credit_Card_Vendor__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Expense Lines</relationshipLabel>
        <relationshipName>Expenses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Date__c</fullName>
        <defaultValue>Today()</defaultValue>
        <inlineHelpText>Transaction date of when the expense was incurred.</inlineHelpText>
        <label>Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Employee_Reimburse__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>Denotes whether the employee should be reimbursed for the expense.</inlineHelpText>
        <label>Employee Reimburse</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Employee__c</fullName>
        <formula>AcctSeed__Expense_Report__r.AcctSeed__Employee__r.FirstName &amp; &quot; &quot; &amp; AcctSeed__Expense_Report__r.AcctSeed__Employee__r.LastName</formula>
        <label>Employee</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Expense_GL_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>This field denotes how the Accounting Department will classify the expense on a profit &amp; loss statement for the project or company.</inlineHelpText>
        <label>Expense GL Account</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>AcctSeed__GL_Account__c.AcctSeed__Used_in_Expense_Reports__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <filterItems>
                <field>AcctSeed__GL_Account__c.AcctSeed__Active__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>AcctSeed__GL_Account__c</referenceTo>
        <relationshipLabel>Expense Lines</relationshipLabel>
        <relationshipName>Expenses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Expense_Report__c</fullName>
        <label>Expense Report</label>
        <referenceTo>AcctSeed__Expense_Report__c</referenceTo>
        <relationshipLabel>Expense Lines</relationshipLabel>
        <relationshipName>Expense_Lines</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>AcctSeed__GL_Account_Variable_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>GL Variable 1</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>AcctSeed__Accounting_Variable__c.AcctSeed__Type__c</field>
                <operation>equals</operation>
                <value>GL Account Variable 1</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>AcctSeed__Accounting_Variable__c</referenceTo>
        <relationshipLabel>Expense Lines</relationshipLabel>
        <relationshipName>Expense_Lines2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AcctSeed__GL_Account_Variable_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>GL Variable 2</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>AcctSeed__Accounting_Variable__c.AcctSeed__Type__c</field>
                <operation>equals</operation>
                <value>GL Account Variable 2</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>AcctSeed__Accounting_Variable__c</referenceTo>
        <relationshipLabel>Expense Lines (GL Variable 2)</relationshipLabel>
        <relationshipName>Expense_Lines3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AcctSeed__GL_Account_Variable_3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>GL Variable 3</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>AcctSeed__Accounting_Variable__c.AcctSeed__Type__c</field>
                <operation>equals</operation>
                <value>GL Account Variable 3</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>AcctSeed__Accounting_Variable__c</referenceTo>
        <relationshipLabel>Expense Lines (GL Variable 3)</relationshipLabel>
        <relationshipName>Expense_Lines4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Internal_Comment__c</fullName>
        <inlineHelpText>Used to record comments for internal communication within your organization. These comments are not seen by customers.</inlineHelpText>
        <label>Internal Comment</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Invoice_Comment__c</fullName>
        <inlineHelpText>Used to record comments for display on billings. These comments are seen by customers.</inlineHelpText>
        <label>Invoice Comment</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Mileage_Destination__c</fullName>
        <inlineHelpText>This field is required when completing an expense report for mileage.</inlineHelpText>
        <label>Mileage Destination</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Mileage_Origin__c</fullName>
        <inlineHelpText>This field is required when completing an expense report for mileage.</inlineHelpText>
        <label>Mileage Origin</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Mileage_Rate__c</fullName>
        <formula>AcctSeed__Expense_GL_Account__r.AcctSeed__Mileage_Rate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Mileage Rate is a calculated field.</inlineHelpText>
        <label>Mileage Rate</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Miles__c</fullName>
        <inlineHelpText>The number of miles you are seeking reimbursement for.</inlineHelpText>
        <label>Miles</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Project_Task__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>Work break down structure for projects, such as: Phases, Deliverables or Roles.</inlineHelpText>
        <label>Project Task</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>AcctSeed__Project_Task__c.AcctSeed__Project__c</field>
                <operation>equals</operation>
                <valueField>$Source.AcctSeed__Project__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>AcctSeed__Project_Task__c</referenceTo>
        <relationshipLabel>Expense Lines</relationshipLabel>
        <relationshipName>Expenses</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Project__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>Related Project or Job for allocation of cost.</inlineHelpText>
        <label>Project</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>AcctSeed__Project__c.AcctSeed__Status__c</field>
                <operation>equals</operation>
                <value>Active</value>
            </filterItems>
            <infoMessage>Project must have a status of active</infoMessage>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>AcctSeed__Project__c</referenceTo>
        <relationshipLabel>Expense Lines</relationshipLabel>
        <relationshipName>Expenses</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Status__c</fullName>
        <formula>Text(AcctSeed__Expense_Report__r.AcctSeed__Status__c)</formula>
        <label>Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Vendor_Employee_Paid__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Denotes whether the expense has been paid to a credit card vendor</inlineHelpText>
        <label>Vendor/Employee Paid</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Vendor_Employee_Payable__c</fullName>
        <formula>IF(AcctSeed__Credit_Card_Vendor_Payable__c = true || AcctSeed__Employee_Reimburse__c = true, 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Vendor/Employee Payable</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Expense Line</label>
    <nameField>
        <displayFormat>EL-{00000}</displayFormat>
        <label>Expense Line Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Expense Lines</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>AcctSeed__Credit_Card_Vendor_Populated</fullName>
        <active>true</active>
        <description>The credit card vendor field and the employee reimburse field cannot both populated</description>
        <errorConditionFormula>AcctSeed__Employee_Reimburse__c = true &amp;&amp; NOT(ISBLANK(AcctSeed__Credit_Card_Vendor__c))</errorConditionFormula>
        <errorDisplayField>AcctSeed__Credit_Card_Vendor__c</errorDisplayField>
        <errorMessage>The employee reimburse field and the credit card vendor field cannot both be populated. You can only select one.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>AcctSeed__Mandatory_Amount</fullName>
        <active>true</active>
        <description>Requires Amount to be mandatory if GL Account is not Mileage type.</description>
        <errorConditionFormula>AND(AcctSeed__Expense_GL_Account__r.AcctSeed__Mileage_Account__c =false, ISBLANK( AcctSeed__Amount__c ))</errorConditionFormula>
        <errorDisplayField>AcctSeed__Amount__c</errorDisplayField>
        <errorMessage>An amount is required for an expense that is not a Mileage reimbursement.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>AcctSeed__Mandatory_Mileage_Rate</fullName>
        <active>true</active>
        <description>Makes Mileage Rate Mandatory</description>
        <errorConditionFormula>AND(AcctSeed__Expense_GL_Account__r.AcctSeed__Mileage_Account__c =true,  ISBLANK(AcctSeed__Miles__c ))</errorConditionFormula>
        <errorDisplayField>AcctSeed__Miles__c</errorDisplayField>
        <errorMessage>A mileage rate needs to be specified if the Expense type is a Mileage GL Account.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>AcctSeed__Value_for_Project</fullName>
        <active>true</active>
        <description>Verifies project field is not blank.</description>
        <errorConditionFormula>ISBLANK( AcctSeed__Project__c )</errorConditionFormula>
        <errorMessage>An expense line must contain a value for the project field.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>AcctSeed__Value_for_Project_Task</fullName>
        <active>true</active>
        <description>Verifies Project Task field is not blank.</description>
        <errorConditionFormula>ISBLANK( AcctSeed__Project_Task__c )</errorConditionFormula>
        <errorMessage>An expense line must contain a value for the project task field.</errorMessage>
    </validationRules>
</CustomObject>